wubi (8.10) UNRELEASED; urgency=low

  * Initial revision
  * Hello world, we have a window showing
  * Fixed loop on quit
  * Fixed tools
  * Added logging support
  * Reorganized commandline arguments
  * Improved progress object
  * Added data dir
  * Added win32 wizard base page class
  * Added mappings
  * Initial win32 page layout

 -- Agostino Russo <agostino.russo@gmail.com>  Sun, 10 Aug 2008 07:08:43 +0100